style.css
.profbox {
    color: rgb(34, 34, 35);
    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-weight:500;
}

a:hover {
    background-color: azure;
}

.appgroup {
    width: min-content;
    display: inline-flex;
    flex-direction: column;
    flex-wrap:wrap;
    height: 100vh;
    font-family: "Geist Pixel";
    font-weight: 100;
}

.app {
    flex-grow:0;
    text-align: center;
    margin-right: 8vh;
}

.apptext {
    margin-top: 0px;
    width: 200%;
}

.icon {
    width: 200%;
}

.window {
    position: absolute;
    display: flex;
    flex-direction: column;
    background-color: #dfdfdf;
    border: 1px solid black;
    border-radius: 7px;
    resize: both;
    overflow: hidden;
}

.windowedge {
    display: flex;
    justify-content: right;
    background-color: #000080;
    padding-top: 5px;
    padding-right: 5px;
}

.windowcontent {
    flex: 1;
    min-height: 0;
}

.windowtitle {
    text-align: left;
    font-family: "Geist Pixel";
    color: white;
    margin-right: auto;
    padding-left: 10px;
}

.tabbutton {
    width: 20px;
    height: 20px;
}

body {
    margin: 0px 0px 0px 0px;
    overflow-x: hidden;
    overflow-y: hidden;
}

#aboutwindow {
    top: 90px;
    left: 340px;
    justify-content: center;
    text-align: center;
}

#aboutpage {
    display: flex;
    font-size: 19px;
    justify-content: center;
    align-items: center;
}

#aboutphoto {
    padding: 30px;
}

#abouttext {
    padding: 20px;
    padding-right: 60px;
    width: 370px;
}

#crustyme {
    max-width: 40vh;
}




#musicwindow {
    top: 40px;
    left: 100px;
    font-family: "Geist Pixel";
}

#musicpage {
    display: flex;
    flex: 1;
    min-height: 0;
    justify-content: center;
    align-items: stretch;
}

#tracklist {
    justify-content: center;
    flex: 1;
    overflow-y: auto;
    overflow-x: hidden;
    min-height: 0;
    padding: 30px;
    align-self: stretch;
    background-color: white;
    border-color: gray;
    border-width: 1px;
    border-style: solid;
    border-radius: 4px;
    margin: 20px;
}

#musictext {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    padding: 30px;
    width: 300px;
    flex-shrink: 0;
    gap: 20px;
}

#albumcover {
    width: 200px;
    height: 200px;
    text-align: center;
    justify-content: center;
    display: flex;
}

#albumcoverimg {
    width: 100%;
    height: 100%;
    object-fit: cover;
    text-align: center;
    justify-content: center;
    align-items: center;
    border-radius: 20px;
}

.song {
    cursor:pointer;
}

.song:hover {
    font-weight: 800;
}

#infobox {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    border-radius: 20px;
    background-color:rgb(255, 255, 255);
    padding: 30px 30px 10px 30px;
    border-color: gray;
    border-style: solid;
    border-width: 1px;
}

#progressbar {
    -webkit-appearance: none;
    width: 100%;
    height: 2px;
    background: #c0c0c0;
    border-top-color: rgb(255, 255, 255);
    border-right-color: rgb(64, 64, 64);
    border-bottom-color: rgb(64, 64, 64);
    border-left-color: rgb(255, 255, 255);
    border-style: solid;
    border-width: 2px;
    cursor:pointer;
}

#progressbar::-webkit-slider-thumb {
    -webkit-appearance: none;
    background: #c0c0c0;
    width: 7px;
    height: 20px;
    border-top-color: rgb(255, 255, 255);
    border-right-color: rgb(64, 64, 64);
    border-bottom-color: rgb(64, 64, 64);
    border-left-color: rgb(255, 255, 255);
    border-style: solid;
    border-width: 2px;
}

.controls {
    display: flex;
}

.btnimg {
    height: 30px;
}

#timekeeper {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

/* The switch - the box around the slider */
.switch {
  position: relative;
  display: inline-block;
  width: 50px;
  height: 27px;
  border-top-color: rgb(255, 255, 255);
  border-right-color: rgb(64, 64, 64);
  border-bottom-color: rgb(64, 64, 64);
  border-left-color: rgb(255, 255, 255);
  border-style: solid;
  border-width: 2px;
  margin: 0px 20px;
}

/* Hide default HTML checkbox */
.switch input {
  opacity: 0;
  width: 0;
  height: 0;
}

/* The slider */
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #c0c0c0;
}

.slider:before {
  position: absolute;
  content: "";
  height: 20px;
  width: 10px;
  left: 3px;
  bottom: 3px;
  background-color: #000000;
}

input:checked + .slider {
  background-color: rgb(163, 163, 163);
}

input:focus + .slider {
  box-shadow: 0 0 1px #a2a2a2;
}

input:checked + .slider:before {
  -webkit-transform: translateX(34px);
  -ms-transform: translateX(34px);
  transform: translateX(34px);
}



#thoughtswindow {
    top: 60px;
    left: 150px;
    font-family: "Geist Pixel";
    width: 740px;
    height: 440px;
}

#thoughtspage {
    background-color: white;
    border-color: gray;
    border-width: 1px;
    border-style: solid;
    border-radius: 4px;
    margin: 30px;
    padding: 30px;
}

#pretext {
    text-align: center;
    margin: 30px;
    font-size: 18px;
}

#ultrakillheader {
    width: 300px;
    border-radius: 20px;
    margin: 30px;
    border-color: rgb(0, 0, 0);
    border-width: 5px;
    border-style: solid;
}

.fileimg {
    width: 50px;
}

.fileline {
    display: flex;
    align-items: center;
    border-radius: 10px;
    cursor: pointer;
}

.fileline:hover {
    background-color: #e3e3e3;
}

.subfile {
    align-items: center;
    margin-left: 30px;
    display: none;
    border-radius: 10px;
    cursor: pointer;
}

.subfile:hover {
    background-color: #e3e3e3;
}

.fileinfo {
    margin-right: 30px;
}

#ultrarank {
    height: 100%;
    width: 100%;
}

#ultrarankyap {
    margin: 20px;
    overflow-y: scroll;
    font-family: "Geist Pixel";
}

.rankingitem {
    display: flex;
    background-color: white;
    border-radius: 20px;
    border-style: solid;
    border-width: 1px;
    border-color: gray;
    width: 90%;
    margin: 30px;
    justify-content: center;
    align-items: center;
    font-size: 22px;
    padding: 30px;
    gap: 60px;
}

.flexcontainer {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 20px;
    background-color: white;
    border-radius: 20px;
    border-style: solid;
    border-width: 1px;
    border-color: gray;
}

.evimg {
    width: 270px;
}

.bimg {
    width: 400px;
}

#tierlist {
    width: 1000px;
}

h5 {
    text-align: center;
    font-size: 40px;
}

.justchatting {
    background-color: white;
    border-radius: 20px;
    border-style: solid;
    border-width: 1px;
    border-color: gray;
    padding: 20px;
    margin: 30px;
    text-align: center;
    font-size: 26px;
}

